// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`upperCase() should fail 1`] = `
Object {
  "children": null,
  "message": "Value should be in uppercase",
  "path": "",
}
`;

exports[`upperCase() should support custom message 1`] = `
Object {
  "children": null,
  "message": "Custom message",
  "path": "",
}
`;
